<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="activityEdit"
            type="com.example.databaserepository_crocodiccore.EditFriendActivity" />

    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/value_15"
        tools:context=".EditFriendActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_the_data"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_15"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="13sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_45"
            android:layout_marginTop="@dimen/value_5"
            android:background="@drawable/background_custom_edit_text_1"
            android:hint="@string/type_here"
            android:inputType="textCapWords"
            android:paddingStart="@dimen/value_10"
            android:paddingTop="@dimen/value_5"
            android:paddingEnd="@dimen/value_10"
            android:paddingBottom="@dimen/value_5"
            android:text='@={activityEdit.name}' />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_15"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="13sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_45"
            android:layout_marginTop="@dimen/value_5"
            android:background="@drawable/background_custom_edit_text_1"
            android:hint="@string/type_here"
            android:inputType="textCapWords"
            android:paddingStart="@dimen/value_10"
            android:paddingTop="@dimen/value_5"
            android:paddingEnd="@dimen/value_10"
            android:paddingBottom="@dimen/value_5"
            android:text='@={activityEdit.gender}' />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_15"
            android:text="@string/school"
            android:textColor="@color/black"
            android:textSize="13sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_45"
            android:layout_marginTop="@dimen/value_5"
            android:layout_marginBottom="@dimen/value_15"
            android:background="@drawable/background_custom_edit_text_1"
            android:hint="@string/type_here"
            android:inputType="textCapWords"
            android:paddingStart="@dimen/value_10"
            android:paddingTop="@dimen/value_5"
            android:paddingEnd="@dimen/value_10"
            android:paddingBottom="@dimen/value_5"
            android:text='@={activityEdit.school}' />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/value_25">

            <Button
                android:id="@+id/btnSaveEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorRed"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/colorBlue"
                android:text="@string/delete" />

        </RelativeLayout>


    </LinearLayout>

</layout>