<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="adapter"
            type="com.example.databaserepository_crocodiccore.adapter.AdapterREAddFriend" />

    </data>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/value_15"
        tools:context=".FriendListActivity">

        <TextView
            android:id="@+id/tvJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_there"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvJudul"
            android:text="@string/this_your_friend_list"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTeman"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnTambah"
            android:layout_below="@id/tvDeskripsi"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:adapter='@{adapter}'
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btnTambah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/add_your_friend" />


    </RelativeLayout>

</layout>